[project]
name = "content-pipeline-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[tools]>=0.175.0",
    "firecrawl-py>=2.16.3",
    "python-dotenv>=1.1.1",
]

[tool.uv]
override-dependencies = [
    "pylance==0.0.0; platform_machine != 'arm64'"
]
